drkns 10.09.2018 20:39:25 +0100 - build 5266

1. Не работал экспорт pluginhotkeys.db

drkns 06.09.2018 23:43:10 +0100 - build 5265

1. При удалении нескольких папок некорректно отображался изначальный подсчет размера.

2. assert в debug при вводе пробела в комстроку.

3. Рефакторинг.

drkns 04.09.2018 21:37:50 +0100 - build 5264

1. При наличии elevated-процесса основной процесс закрывался раньше, чем надо.

2. С форума: Ошибка при получении помощи по плагину.

MZK 02.09.2018 23:09:13 -0700

1. Перевёл страницу @ChangeDriveMode справки на английский и поредактировал русскую страницу.

drkns 02.09.2018 22:14:00 +0100 - build 5263

1. Поле "Owner" в диалоге атрибутов передвинуто вниз.

2. Рефакторинг.

3. Update Slovak translation.

zg 01.09.2018 18:59:52 +0300 - build 5262

1. проверка корректности координат в DialogInit.

drkns 22.08.2018 23:59:59 +0100 - build 5261

1. Откат отката (4858) и возвращение к 4853 и shared_mutex. Возможно, поиску в архивах станет лучше. Или нет.

zg 22.08.2018 17:50:28 +0300 - build 5260

1. откат 5256.

drkns 22.08.2018 02:28:40 +0100 - build 5259

1. В CRT VS 2017 15.8 напихали очередной гадости, vc_crt_fix* обновлены для поддержки старых ОС.

MZK 19.08.2018 16:14:41 -0700

1. Перевел на английский страничку подсказки @Codepages.NoAutoDetectCP.

drkns 19.08.2018 14:58:35 +0100 - build 5258

1. Уточнения в обработке ".." в панелях плагинов.
   - OPIF_ADDDOTS добавляет ".." всегда.
   - если OPIF_ADDDOTS не установлен, то надкаталогом считается первый ".." в списке, независимо от наличия FILE_ATTRIBUTE_DIRECTORY.
   - Отличаем виртуальный ".." от настоящей папки, если возможно.

drkns 19.08.2018 08:53:24 +0100 - build 5257

1. VS 2017 15.8.1.

zg 15.08.2018 00:00:47 +0300 - build 5256

1. все вызовы плагинов защищены глобальной критической секцией.

drkns 09.08.2018 21:06:04 +0100 - build 5255

1. Оказывается, SQLite, начиная с 3.21, не использует rand_s() и костыль для поддержки Win2k, добавленный в 4710, больше не нужен.
