@@ -1,3 +1,7 @@
+zg 13.09.2018 12:09:52 +0300 - build 5267
+
+1. уточнение 5262: вызов DialogInit(-1,-1,0,0) эквивалентен DialogInit(-1,-1,1,1).
+
 drkns 10.09.2018 20:39:25 +0100 - build 5266
 
 1. Не работал экспорт pluginhotkeys.db
